Style hero section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="hero-section">
-        <header>
+        <header id="header">
             <nav>
                 <img src="assets/tomato.png" id="icon" alt="Tomato Icon">
 
@@ -25,11 +25,20 @@
                 </ul>
             </nav>
         </header>
+        <hr>
 
-        <section>
-            <h1>Hi <span id="name"></span>, Welcome to Website</h1>
+        <section id="hero-text">
+            <div id="hero-welcome">
+                <h1>Hi <span id="name"></span>, Welcome to Website</h1>
+                <p>Ini adalah website latihan pertama</p>
+            </div>
+
+            <div id="hero-banner">
+                <img src="assets/banner.jpeg" alt="Photo banner">
+            </div>
         </section>
     </div>
+    <hr>
 
     <div id="about-section">
         <footer>
