--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#hero-section">Home</a></li>
                 <li><a href="#about-section">Our Profile</a></li>
                 <li><a href="#">Portofolio</a></li>
-                <li><a href="#">Message Us</a></li>
+                <li><a href="#message-us">Message Us</a></li>
             </ul>
         </nav>
         <hr>
@@ -66,8 +66,52 @@
             </div>
         </div>
         
-        <div class="about-message">
+        <div class="about-message" id="message-us">
             <h2>Message Us</h2>
+
+            <div class="form-input">
+                <form class="message-form">
+                    <div class="form-group">
+                        <label for="name">Nama :</label>
+                        <input type="text" id="name" name="name" placeholder="Nama">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="dob">Tanggal Lahir :</label>
+                        <input type="date" id="dob" name="dob">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Jenis Kelamin :</label>
+                        <label><input type="radio" name="gender" value="Laki-laki"> Laki-laki</label>
+                        <label><input type="radio" name="gender" value="Perempuan"> Perempuan</label>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Pesan :</label>
+                        <textarea id="message" name="message" rows="4"></textarea>
+                    </div>
+
+                    <button type="submit">Submit</button>
+                </form>
+
+                <div class="form-result">
+                    <p><strong>Current time :</strong></p><span id="date"></span>
+                    <br><hr><br>
+
+                    <p><strong>Nama :</strong></p>
+                    <span id="nama">Ita</span><br>
+
+                    <p><strong>Tanggal Lahir :</strong></p>
+                    <span id="tanggal-lahir">15 Juli 1991</span><br>
+
+                    <p><strong>Jenis Kelamin :</strong></p>
+                    <span id="jenis-kelamin">Perempuan</span><br>
+
+                    <p><strong>Pesan :</strong></p>
+                    <span id="pesan">Ada apa hayooo</span>
+                </div>
+            </div>
         </div>
         <hr>
 
