--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                 <div class="form-group">
                     <label for="dob">Date of Birth</label>
-                    <input type="text" class="date-input" id="dob" name="dob" placeholder="Select Date">
+                    <input type="text" class="date-input" id="dob" name="dob" placeholder="Select Date" required>
                 </div>
 
                 <div class="form-group">
