Add icon to title bar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Revou | My Website</title>
+    <title>Ita | Developer</title>
+    <link rel="icon" href="assets/tomato.png" type="image/png">
 
     <!-- Link to Flatpickr (Custom Date Picker) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
