Update footer and form modal styling

--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; Created by Ita</p>
+        <div class="footer-content">
+            <p class="footer-text">Living, learning, & leveling up one day at a time.</p>
+            <p class="footer-copyright">Handcrafted by Ita © <span class="current-year"></span></p>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
