--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Link to Flatpickr (Custom Date Picker) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
+    <!-- Link to Font Awesome for Social Media Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <!-- Link to CSS Styles -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -151,7 +154,20 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p class="footer-text">Living, learning, & leveling up one day at a time.</p>
+            <p class="footer-text">Committing progress—one line of code (and life) at a time.</p>
+
+            <div class="footer-socials">
+                <a href="https://www.linkedin.com/in/itayuliana/" target="_blank" class="social-icon">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://www.instagram.com/itayuliana_/" target="_blank" class="social-icon">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="mailto:iyuliana1507@email.com" class="social-icon">
+                    <i class="fas fa-envelope"></i>
+                </a>
+            </div>
+
             <p class="footer-copyright">Handcrafted by Ita © <span class="current-year"></span></p>
         </div>
     </footer>
